[gd_scene load_steps=9 format=1]

[ext_resource path="res://rcos/connector/connector_gui.gd" type="Script" id=1]
[ext_resource path="res://rcos/connector/scanner.gd" type="Script" id=2]
[ext_resource path="res://rcos/lib/scroller_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://rcos/lib/scroller_input_area.tscn" type="PackedScene" id=4]
[ext_resource path="res://rcos/connector/graphics/icon.scanner.png" type="Texture" id=5]
[ext_resource path="res://rcos/connector/graphics/icon.favs.png" type="Texture" id=6]
[ext_resource path="res://rcos/connector/graphics/icon.custom.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.199219, 0.199219, 0.199219, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 1
border_blend = true
draw_bg = true

[node name="connector_gui" type="Panel"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="tabs" type="TabContainer" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 40.0
margin/right = 0.0
margin/bottom = 0.0
tab_align = 0
tabs_visible = false

[node name="scanner" type="ReferenceFrame" parent="tabs"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 4.0
margin/bottom = 4.0
script/script = ExtResource( 2 )

[node name="read_packets_timer" type="Timer" parent="tabs/scanner"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = true

[node name="interfaces_panel" type="Panel" parent="tabs/scanner"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 5.0
custom_styles/panel = SubResource( 1 )

[node name="interfaces_scroller" parent="tabs/scanner/interfaces_panel" instance=ExtResource( 3 )]

margin/left = 2.0
margin/top = 2.0
margin/right = 2.0
margin/bottom = 2.0

[node name="interfaces_list" type="VBoxContainer" parent="tabs/scanner/interfaces_panel/interfaces_scroller"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 1
alignment = 0

[node name="scroller_input_area" parent="tabs/scanner/interfaces_panel/interfaces_scroller" instance=ExtResource( 4 )]

[node name="favorites" type="ReferenceFrame" parent="tabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 4.0
margin/bottom = 4.0

[node name="custom" type="ReferenceFrame" parent="tabs"]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 8.0
margin/right = 4.0
margin/bottom = 4.0

[node name="buttons" type="HButtonArray" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 80.0
margin/bottom = 40.0
custom_constants/button_separator = 0
custom_constants/icon_separator = 0
flat = false
button/count = 3
button/min_button_size = 40.0
button/align = 0
button/0/text = ""
button/0/tooltip = ""
button/0/icon = ExtResource( 5 )
button/1/text = ""
button/1/tooltip = ""
button/1/icon = ExtResource( 6 )
button/2/text = ""
button/2/tooltip = ""
button/2/icon = ExtResource( 7 )
button/selected = 0


